removed sentences template, prevent wrapping in first td

--- a/templates/vocabulary/style.css
+++ b/templates/vocabulary/style.css
@@ -29,3 +29,7 @@ table td + td {
     padding-left: 30px;
     color: #808080;
 }
+
+td:first-child {
+    white-space: nowrap;
+}
